--- a/scripts/modules/commonUtil/searchCompany.html
+++ b/scripts/modules/commonUtil/searchCompany.html
@@ -1,35 +1,41 @@
-<div class="row">
-	<div class="col-md-6">
-		<div class="form-group">
-			<label>Search companies</label>
-			<input type="text" class="form-control" ng-model="query" />
+<div>
+	<div class="row">
+		<div class="col-md-6">
+			<h3>Search Companies</h3>
 		</div>
-		<div class="form-group">
-			<label>
-				<input type="checkbox" ng-model="includeIndexes" /> Include indexes
-			</label>
-		</div>
-		<button type="button" ng-click="searchCompany()" class="btn btn-primary">Search</button>
 	</div>
-	<div class="col-md-6">
-		{{securities}}
-		<table>
-			<thead>
-				<tr>
-					<th>Symbol</th>
-					<th>Description</th>
-					<th>Type</th>
-					<th>Exchange</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr ng-repeat="sec in securities">
-					<td>{{sec.symbol}}</td>
-					<td>{{sec.description}}</td>
-					<td>{{sec.type}}</td>
-					<td>{{sec.exchange}}</td>
-				</tr>
-			</tbody>
-		</table>
+	<div class="row">
+		<div class="col-md-4">
+			<form ng-submit="searchCompanies()">
+				<div class="form-group">
+					<label>Search companies</label>
+					<input required type="text" class="form-control" placeholder="e.g. microsoft" ng-model="query" />
+				</div>
+				<button type="submit" class="btn btn-primary">Search</button>
+			</form>
+		</div>
+		<div class="col-md-8">
+			<div>
+				Click on companies to add the symbols to the quote search
+			</div>
+			<table style="width:100%" class="table-striped table-responsive table-hover">
+				<thead>
+					<tr>
+						<th>Symbol</th>
+						<th>Description</th>
+						<th>Type</th>
+						<th>Exchange</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr ng-repeat="sec in securities" ng-click="addSymbol(sec.symbol)">
+						<td>{{sec.symbol}}</td>
+						<td>{{sec.description}}</td>
+						<td>{{sec.type}}</td>
+						<td>{{sec.exchange}}</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 	</div>
 </div>
