adjusted helpers and added market history

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<script src="scripts/jquery/jquery-2.1.4.min.js" ></script>
 		<script src="scripts/angular/angular.min.js" ></script>
 		<script src="scripts/angular/angular-route.js"></script>
+		<script src="scripts/angular/ui-bootstrap-tpls-0.14.3.js"></script>
 		
 		<script src="release/js/mainJS.js" ></script>
 	</head>
