reorganized file structure, added line charts

--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <html>
 	<head>
-		<link type="text/css" rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
-		<script src="scripts/jquery/jquery-2.1.4.min.js" ></script>
-		<script src="scripts/angular/angular.min.js" ></script>
-		<script src="scripts/angular/angular-route.js"></script>
-		<script src="scripts/angular/ui-bootstrap-tpls-0.14.3.js"></script>
+		<!--style sheets-->
+		<link type="text/css" rel="stylesheet" href="styles/bootstrap/css/bootstrap.min.css" />
+		<link type="text/css" rel="stylesheet" href="styles/LineChart.css" />
 		
+		<!--3rd party scripts-->
+		<script src="scripts/external/jquery/jquery-2.1.4.min.js" ></script>
+		<script src="scripts/external/angular/angular.min.js" ></script>
+		<script src="scripts/external/angular/angular-route.js"></script>
+		<script src="scripts/external/angular/ui-bootstrap-tpls-0.14.3.js"></script>
+		<script src="scripts/external/d3/d3.min.js"></script>
+		<script src="scripts/external/angular/LineChart.js"></script>
+		
+		<!--app js-->
 		<script src="release/js/mainJS.js" ></script>
 	</head>
 	<body>
