--- a/scripts/app/modules/market/marketHistory.html
+++ b/scripts/app/modules/market/marketHistory.html
@@ -33,6 +33,7 @@
 			</form>
 		</div>
 		<div class="col-md-8">
+			<linechart data="graphData" options="graphOptions"></linechart>
 			{{history}}
 		</div>
 	</div>
