--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 		<script src="scripts/external/angular/LineChart.js"></script>
 		
 		<!--app js-->
-		<script src="release/js/mainJS.js" ></script>
+		<script src="scripts/release/js/mainJS.js" ></script>
 	</head>
 	<body>
-		<h3>Trade App</h3>
+		<h3>MyTrade</h3>
 		<div class="container" ng-app="tradeApp">
 			<!--App windows go here-->
 			<div ng-view></div>
