--- a/scripts/app/modules/market/quotes.html
+++ b/scripts/app/modules/market/quotes.html
@@ -1,6 +1,9 @@
 
 <div>
-	<search-company symbols="symbols"></search-company>
+	<div class="row">
+    <a href="/#/">Back to dashboard</a>
+	</div>
+	<search-company symbol-action="addSymbol"></search-company>
 	<h3>Get Quotes</h3>
 	<div class="row">
 		<div class="col-md-4">
