--- a/scripts/app/modules/market/marketHistory.html
+++ b/scripts/app/modules/market/marketHistory.html
@@ -1,10 +1,19 @@
 <div>
 	<div class="row">
+    <a href="/#/">Back to dashboard</a>
+	</div>
+      
+	<div class="row">
 		<div class="col-md-4">
 			<form ng-submit="getHistory()">
 				<div class="form-group">
 					<label>Symbol</label>
-					<input type="text" required ng-model="symbol" class="form-control" />
+					<div class="input-group">
+						<input type="text" required ng-model="symbol" class="form-control" />
+						<span class="input-group-btn">
+							<button type="button" class="btn btn-default" ng-click="openSearchCompanyModal()"><i class="glyphicon glyphicon-search"></i></button>
+						</span>
+					</div>
 				</div>
 				<div class="form-group">
 					<label>Interval</label>
@@ -12,27 +21,31 @@
 						<option value="">-- Select Interval --<option>
 					</select>
 				</div>
-				<p class="input-group">
+				<div class="form-group">
 					<label>Start Date</label>
-					<input type="text" class="form-control" required uib-datepicker-popup="MM/dd/yyyy" ng-model="startDate" is-open="startOpen" 
-							max-date="today" show-weeks="false" show-button-bar="false" />
-					<span class="input-group-btn">
-						<button type="button" class="btn btn-default" ng-click="open('sd',$event)"><i class="glyphicon glyphicon-calendar"></i></button>
+					<span class="input-group">
+						<input type="text" class="form-control" required uib-datepicker-popup="MM/dd/yyyy" ng-model="startDate" is-open="startOpen" 
+								max-date="today" show-weeks="false" show-button-bar="false" />
+						<span class="input-group-btn">
+							<button type="button" class="btn btn-default" ng-click="open('sd',$event)"><i class="glyphicon glyphicon-calendar"></i></button>
+						</span>
 					</span>
-				</p>
-				<p class="input-group">
+				</div>
+				<div class="form-group">
 					<label>End Date</label>
-					<input type="text" class="form-control" required uib-datepicker-popup="MM/dd/yyyy" ng-model="endDate" is-open="endOpen" 
-							max-date="today" show-weeks="false" show-button-bar="false" />
-					<span class="input-group-btn">
-						<button type="button" class="btn btn-default" ng-click="open('ed', $event)"><i class="glyphicon glyphicon-calendar"></i></button>
-					</span>
-				</p>
+					<div class="input-group">
+						<input type="text" class="form-control" required uib-datepicker-popup="MM/dd/yyyy" ng-model="endDate" is-open="endOpen" 
+								max-date="today" show-weeks="false" show-button-bar="false" />
+						<span class="input-group-btn" >
+							<button type="button" class="btn btn-default" ng-click="open('ed', $event)"><i class="glyphicon glyphicon-calendar"></i></button>
+						</span>
+					</div>
+				</div>
 				<br />
 				<button type="submit" class="btn btn-primary">Get History</button>
 			</form>
 		</div>
-		<div class="col-md-8">
+		<div class="col-md-8" style="min-height:360px;">
 			<linechart data="graphData" options="graphOptions"></linechart>
 		</div>
 	</div>
